@@ -2557,6 +2557,78 @@ $(OBJ_DIR)$(DIR_SEP)todbc$(OBJEXT) : $(OBJ_DIR)$(DIR_SEP)todbc.c
 $(OBJ_DIR)$(DIR_SEP)hb_f$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)hb_f.c
 	$(CC_CMD)
 
+$(OBJ_DIR)$(DIR_SEP)date$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)date.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)dates2$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)dates2.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)dbf$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)dbf.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)environ$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)environ.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)stringsx$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)stringsx.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)gauge$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)gauge.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)mathx$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)mathx.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)strfmt$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)strfmt.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)num$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)num.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)status$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)status.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)stack$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)stack.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)time$(OBJEXT) : $(MISC_DIR)$(DIR_SEP)time.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)nconvert$(OBJEXT) : $(OBJ_DIR)$(DIR_SEP)nconvert.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)stringp$(OBJEXT) : $(OBJ_DIR)$(DIR_SEP)stringp.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)fileread$(OBJEXT) : $(OBJ_DIR)$(DIR_SEP)fileread.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)numtxten$(OBJEXT) : $(OBJ_DIR)$(DIR_SEP)numtxten.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)numtxthu$(OBJEXT) : $(OBJ_DIR)$(DIR_SEP)numtxthu.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)twirler$(OBJEXT) : $(OBJ_DIR)$(DIR_SEP)twirler.c
+	$(CC_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)nconvert.c : $(MISC_DIR)$(DIR_SEP)nconvert.prg
+	$(HB_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)stringp.c : $(MISC_DIR)$(DIR_SEP)stringp.prg
+	$(HB_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)fileread.c : $(MISC_DIR)$(DIR_SEP)fileread.prg
+	$(HB_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)numtxten.c : $(MISC_DIR)$(DIR_SEP)numtxten.prg
+	$(HB_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)numtxthu.c : $(MISC_DIR)$(DIR_SEP)numtxthu.prg
+	$(HB_CMD)
+
+$(OBJ_DIR)$(DIR_SEP)twirler.c : $(MISC_DIR)$(DIR_SEP)twirler.prg
+	$(HB_CMD)
+
 #===============================================================================
 # TIP.LIB rules
 #===============================================================================
